--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "url-parse": ">=1.4.3",
     "fresh": ">=0.5.2",
     "mime": ">=1.4.1"
+  },
+  "dependencies": {
+    "truffle-hdwallet-provider": "0.0.6"
   }
 }
